--- a/HW3/hw3_solutions.lyx
+++ b/HW3/hw3_solutions.lyx
@@ -1304,12 +1304,10 @@ Since
 \boldsymbol{H} & = & \boldsymbol{G}^{T}\boldsymbol{G}\\
  & = & \left[\begin{array}{c}
 \boldsymbol{g_{1}}^{T}\\
-\boldsymbol{g_{2}}^{T}\\
 \vdots\\
-\boldsymbol{g_{M-1}}^{T}\\
 \boldsymbol{g_{M}}^{T}
-\end{array}\right]\left[\begin{array}{ccccc}
-\boldsymbol{g_{1}} & \boldsymbol{g_{2}} & ... & \boldsymbol{g_{M-1}} & \boldsymbol{g_{M}}\end{array}\right]
+\end{array}\right]\left[\begin{array}{ccc}
+\boldsymbol{g_{1}} & ... & \boldsymbol{g_{M}}\end{array}\right]
 \end{eqnarray*}
 
 \end_inset
@@ -1333,26 +1331,13 @@ then
 \end_layout
 
 \begin_layout Standard
-The diagonal elements of 
-\begin_inset Formula $\boldsymbol{H}$
-\end_inset
-
- are the squared lengths of the column vectors of 
-\begin_inset Formula $\boldsymbol{G}$
-\end_inset
-
-, the off-diagnoal elements measure how much the column vectors of 
-\begin_inset Formula $\boldsymbol{G}$
-\end_inset
-
- project onto each other.
- Because
+Remember that
 \end_layout
 
 \begin_layout Standard
 \begin_inset Formula 
 \begin{eqnarray*}
-\boldsymbol{g_{i}}^{T}\boldsymbol{g_{j}} & = & ||\boldsymbol{g_{i}}||_{2}||\boldsymbol{g_{j}}||_{2}\cos(\angle(\boldsymbol{g_{i}},\boldsymbol{g_{j}}))
+\boldsymbol{g_{i}}^{T}\boldsymbol{g_{j}} & = & \boldsymbol{g_{i}}\cdot\boldsymbol{g_{j}}=||\boldsymbol{g_{i}}||_{2}||\boldsymbol{g_{j}}||_{2}\cos(\angle(\boldsymbol{g_{i}},\boldsymbol{g_{j}}))
 \end{eqnarray*}
 
 \end_inset
@@ -1361,12 +1346,27 @@ The diagonal elements of
 \end_layout
 
 \begin_layout Standard
-It is related to the orientation of the two vectors with respect to each
- other, as well as the lengths of the two vectors.
+We see the diagonal elements of 
+\begin_inset Formula $\boldsymbol{H}$
+\end_inset
+
+ are the squared lengths of the column vectors of 
+\begin_inset Formula $\boldsymbol{G}$
+\end_inset
+
+, and the off-diagonal elements measure how much the column vectors of 
+\begin_inset Formula $\boldsymbol{G}$
+\end_inset
+
+ project onto each other.
 \end_layout
 
 \begin_layout Subsection*
 (c) 5 points
+\end_layout
+
+\begin_layout Standard
+Similarly,
 \end_layout
 
 \begin_layout Standard
@@ -1381,54 +1381,15 @@ It is related to the orientation of the two vectors with respect to each
 \end_layout
 
 \begin_layout Standard
-which is the projection of 
+is a column vector whose elements measure how much 
 \begin_inset Formula $\boldsymbol{d}$
 \end_inset
 
- into the model space.
-\end_layout
-
-\begin_layout Standard
-Let's continue the discussions in (b).
- Suppose we project a vector 
-\begin_inset Formula $\boldsymbol{d}$
-\end_inset
-
- into the column space of 
-\begin_inset Formula $\boldsymbol{G}$
-\end_inset
-
-, the coordinates are 
-\begin_inset Formula $(m_{1},...,m_{M})$
-\end_inset
-
-.
- If the length of certain column vector 
+ projects onto the different vector 
 \begin_inset Formula $\boldsymbol{g_{i}}$
 \end_inset
 
- is small, an error in 
-\begin_inset Formula $\boldsymbol{d}$
-\end_inset
-
- will cause a big error in 
-\begin_inset Formula $m_{i}$
-\end_inset
-
 .
- The error in 
-\begin_inset Formula $\boldsymbol{d}$
-\end_inset
-
- also tends to affect those 
-\begin_inset Formula $m_{i}$
-\end_inset
-
- similarly if their corresponding column vectors 
-\begin_inset Formula $\boldsymbol{g_{i}}$
-\end_inset
-
- are near parallel.
 \end_layout
 
 \begin_layout Subsection*
@@ -1436,8 +1397,31 @@ Let's continue the discussions in (b).
 \end_layout
 
 \begin_layout Standard
+The given equation can be written as
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\begin{eqnarray*}
+\boldsymbol{G}^{T}(\boldsymbol{Gm}_{LLS}) & = & \boldsymbol{G}^{T}\boldsymbol{d}
+\end{eqnarray*}
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+where 
+\begin_inset Formula $\boldsymbol{m}_{LLS}$
+\end_inset
+
+ denotes the linear least square solution.
+\end_layout
+
+\begin_layout Standard
 This equation implies that 
-\begin_inset Formula $\boldsymbol{Gm_{LLS}}$
+\begin_inset Formula $\boldsymbol{Gm}_{LLS}$
 \end_inset
 
  equals the projection of 
@@ -1446,7 +1430,7 @@ This equation implies that
 
  in the model space.
  Thus, the least-squares solution 
-\begin_inset Formula $\boldsymbol{m_{LLS}}$
+\begin_inset Formula $\boldsymbol{m}_{LLS}$
 \end_inset
 
  is the coordinate of 
